# DinoGame

./: .gitignore  Bird.cpp  Bird.h  CMakeLists.txt  Cloud.cpp  Cloud.h  Dino.cpp  Dino.h  Ground.cpp  Ground.h  Objects.cpp  Objects.h  Window.cpp  Window.h  main.cpp  restartButton.cpp  restartButton.h
